2005-11-16  Bastien Nocera <hadess@hadess.net>

	* configure.in:
	* src/buoh-view-comic.c:
	* src/buoh-window.c:
	* src/buoh.c:
	Make buoh work with GTK+ 2.6

2005-11-16  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-add-comic-dialog.[ch]:
	* src/buoh-comic-list.[ch]:
	* src/buoh-comic-loader.[ch]:
	* src/buoh-comic-manager-date.[ch]:
	* src/buoh-comic-manager.[ch]:
	* src/buoh-comic.[ch]:
	* src/buoh-properties-dialog.[ch]:
	* src/buoh-view-comic.[ch]:
	* src/buoh-view-message.[ch]:
	* src/buoh-view.[ch]:
	* src/buoh-window.[ch]:
	* src/buoh.[ch]: 
	Code cleanups

2005-11-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am: Add cache files
	* src/buoh-comic-cache.[ch]:
	* src/buoh-comic.c: Cache use for pixbuf property
	* src/buoh.c: Create cache dir on startup if not exists
	Cache system to reduce and limit the buoh memory usage.

	* src/buoh-comic-list.c:
	* src/buoh-comic-loader.c:
	* src/buoh-properties-dialog.c:
	* src/buoh-view-comic.c:
	* src/buoh-window.c: 
	* src/buoh.c:
	Many leaks fixed
	
2005-11-10  Esteban Sanchez <esteban@steve-o.org>

	* src/main.c: Now it calls to bind_textdomain and
	bind_textdomain_codeset to allow translations.

	* data/comics.xml: Added userfriendly and Penny Arcade.
	
	* NEWS: Typo fixed

2005-11-08  Esteban Sanchez <esteban@steve-o.org>
	
	* configure.in: Version 0.8.

	* NEWS: Added release info
	
	* data/comics.xml: Removed abandoned and problematics strips.

2005-11-08  Esteban Sanchez <esteban@steve-o.org>

	* src/buoh-comic.[ch]: Clean up old code. Added a new method
	buoh_comic_get_filename.
	
	* src/buoh-comic.c: Fixed a memory leak.

	* src/buoh-window.c: The suggested name on the save dialog is now the
	same than the original but with the PNG extension. Added a function
	to set the sensitiveness of the browsing actions (Prev, Next, First &
	Last)
	
	* data/comics.xml: Removed duplicated strip.

2005-10-02  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-window.c: Updated a string.
